--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,15 @@
 }
 body{
     background-color: rgb(253, 253, 253);
+    margin: 0 ;
+    padding: 0 ;
+    height: 100% ;
+}
+.navbar{
+    background-color: #000;
+    color: #fff;
+    font-family: "Roboto" , sans-serif;
+    transition: all 0.8s;
 }
 .acceuil_img{
     height: 400px ;
