--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -3,10 +3,9 @@
 /* debut de style globale pour navbar */
     .navbar{
         background-color: #000;
-        box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.3);
         color: #fff;
         font-family: "Roboto" , sans-serif;
-        /* height: 50px; */
+        transition: all 0.8s;
     }
     .navbar img{
         width: 120px ;
