--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -8,6 +8,18 @@
 #editIcon {
     cursor: pointer;
 }
+#panier_img{
+    max-width: 400px ;
+    height:300px  ;
+}
+.produit_panier_img{
+    max-width: 200px ;
+    max-height: 150px ;
+    transition: ease-out 0.2s;
+}
+.produit_panier_img:hover{
+    transform: scale(1.04);
+}   
 li .li-text{
     font-size: 20px ;
 }
